--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
+    "lodash": "^3.10.1",
     "react": "^0.14.5",
     "react-dom": "^0.14.5"
   }
