--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run build:watch",
+    "start": "npm run build:watch & npm run server:api",
+    "server:api": "json-server json-server-db.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "build:watch": "webpack-dev-server --inline"
@@ -22,8 +23,10 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
+    "json-server": "^0.8.5",
     "lodash": "^3.10.1",
     "react": "^0.14.5",
-    "react-dom": "^0.14.5"
+    "react-dom": "^0.14.5",
+    "superagent": "^1.6.1"
   }
 }
